--- a/API image project/index.html
+++ b/API image project/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <button id="button">Click me</button>
-  <input type="number" id="quantity">
+  <input type="number" value="" id="quantity">
   <div class="gallery"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
