--- a/API image project/index.html
+++ b/API image project/index.html
@@ -7,13 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-  <button id="button">Click me</button>
-  <input type="number" value="" id="quantity">
-  <div class="gallery"></div>
+  <button id="click-me">Click me</button>
+  номер страницы: <input type="number" value="" id="page-number">
+  <div id="result"></div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous">
     </script>
-    <script src="script.js"></script>
+<script src="script.js"></script>
+<script src="service.js"></script>
 </body>
 </html>
